fix(portal-next): make contrast test consistent

--- a/gravitee-apim-portal-webui-next/src/scss/theme/theme.scss
+++ b/gravitee-apim-portal-webui-next/src/scss/theme/theme.scss
@@ -22,7 +22,7 @@ $mat-primary: (
   200: #6c59bd,
   contrast: (
     main: #fff,
-    lighter: rgba(#000, 0.87),
+    lighter: #1d192b,
     darker: #1d192b,
   ),
 );
@@ -44,7 +44,7 @@ $mat-warn: (
   200: #ba1a1a,
   contrast: (
     main: #fff,
-    lighter: rgba(#000, 0.87),
+    lighter: #1d192b,
     darker: #1d192b,
   ),
 );
